[project]
name = "template"
version = "0.1.0"
description = "DS project template"
readme = "README.md"
authors = [{ name = "Andrea Piccione", email = "andrea.piccione@arenko.group" }]
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "opencv-python>=4.0.0,<5.0.0"
]
[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0",
    "ruff>=0.5.4,<1",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.4",
]
[tool.ruff]
lint.select = ["E", "F", "I", "N", "W", "D207", "D208", "D300", "UP", "YTT", "ASYNC", "A", "DTZ", "G10", "G101", "G201", "G202", "INP001", "PIE", "T20", "SIM", "PTH", "PD", "PLE", "PLR", "PLW", "TRY", "NPY", "RUF"]
lint.ignore = ["PD010", "PD901", "PLR2004", "UP017", "N803", "N806", "PLW2901", "PLR0913", "PLR0915", "INP001"]
line-length = 120
target-version = "py313"

[tool.ruff.lint.extend-per-file-ignores]
"test/***" = ["INP001"]
"__init__.py" = ["E402"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = "src"
